Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1151

Creator keeps indexing project after project was closed

XMLWordPrintable

      To reproduce:
      Open projects.pro from Qt's source directory in Creator. Creator starts indexing using one CPU core to capacity.
      Close the project. Creator keeps indexing, CPU load stays up.
      Open projects.pro again. Creator starts indexing again fully loading another core.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes