Cancel code model indexing on project closing and full code model update

Task-Nr: QTCREATORBUG-1151